# Laba-6-and-7.

./: 1.1 (из лабы).drawio  CHITAT.hpp  CMakeLists.txt  KVADRAT.hpp  Laba 6.cpp  Laba4.А-0.drawio  MINIMUM.hpp  PROVERKA.hpp  VIVOD.hpp  Диаграмма без названия.drawio
